# indicadors_iso

./: .cursorrules  .gitignore  CLAUDE.MD  CLAUDE.md  DB_CONTEXT.md  DB_CONTEXT.txt  DB_CONTEXT_AWS.md  DB_CONTEXT_dicts.md  README.md  admissions.sql  bacteriemia.sql  connection.py  generated_query.sql  llistat.txt  metabaser_query_example.py  notes.txt  nutritions.ipynb  nutritions.sql  pyproject.toml  requirements.txt  testing.ipynb  vap.txt
.github/: copilot-instructions.md
admissions/: README.md  admissions_ward.sql  hosp_ward_longest_stay.py  hosp_ward_longest_stay_no_prescription.py  hosp_ward_longest_stay_val.py  hosp_ward_stays.py  icu_real_admissions.py  lab_admissions.py  lab_admissions_val.py  origin.py  short_stays_investigation.md  stays_by_month.py
data_quality/: _metrics.py  _sql.py  completeness_2024_vs_2025.py
deliris/: README.md  RESULTS.md  camicu_compliance.sql  camicu_daily_coverage.sql  camicu_daily_coverage_excl_deep_rass.sql  camicu_plots.py  camicu_positivity.sql  deliris.ipynb  deliris.py  deliris.sql  deliris_coverage_plots.py  deliris_positivity.sql  deliris_rass.sql  deliris_rass_coverage.sql  run_sql.py
demographics/: README.md  _bed_capacity_sql.py  _bed_occupancy.py  _config.py  _loader.py  _metrics.py  _report.py  _sql.py  cirrhosis_comparison.py  cohort_table_2024_E073-I073.html  demo.py  demo.sql  run_analysis.py  threshold_sensitivity.py  ward_stays_demo.py
dictionaries/: adm_disch_motive_dictionary.csv  antibiogram_sample_type_dictionary.csv  antibiotic_dictionary.csv  atc_dictionary.csv  dic_diagnostic.csv  dic_ou_loc.csv  (+53 more)
(+143 files in other folders)
